# code-animation

./: App.css  Cargo.toml  bun.lockb  index.html  package.json  prism.css  prism.js  styles.css  vite.config.ts
src/: App.tsx  app.rs  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: html_element.rs  keys.rs  main.rs  state.rs
